[gd_scene load_steps=15 format=2]

[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Common/SignFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TitleScreen/menuTheme.tres" type="Theme" id=3]
[ext_resource path="res://SettingsBar/button_fullscreen_expand_nobg.png" type="Texture" id=4]
[ext_resource path="res://SettingsBar/button_sound_on_nobg.png" type="Texture" id=5]
[ext_resource path="res://TitleScreen/Credits/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://TitleScreen/frog_cards.png" type="Texture" id=8]
[ext_resource path="res://TitleScreen/Mouse_cards.png" type="Texture" id=9]
[ext_resource path="res://TitleScreen/main_screen_Grass.png" type="Texture" id=10]
[ext_resource path="res://TitleScreen/GameLogo.png" type="Texture" id=11]
[ext_resource path="res://Common/AveriaLibre-Bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://TitleScreen/Sunset.ogg" type="AudioStream" id=15]
[ext_resource path="res://TitleScreen/button_twoplayer.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 46
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 10 )

[node name="Frog" type="Sprite" parent="."]
position = Vector2( 121, 810 )
texture = ExtResource( 8 )

[node name="Mouse" type="Sprite" parent="."]
position = Vector2( 1827, 757 )
texture = ExtResource( 9 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 968, 201 )
texture = ExtResource( 11 )

[node name="CreditScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -256.0
margin_right = 347.0
margin_bottom = -200.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.964706, 1 )
custom_fonts/font = SubResource( 1 )
text = "A Two Player Tactical Tile Game"

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -95.5
margin_right = 350.0
margin_bottom = 79.5
text = "PLAY"
icon = ExtResource( 17 )

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = 120.0
margin_right = 300.0
margin_bottom = 295.0
text = "CREDITS"

[node name="FullscreenButton" type="Button" parent="."]
margin_left = 731.0
margin_top = 875.0
margin_right = 906.0
margin_bottom = 1050.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
icon = ExtResource( 4 )
expand_icon = true

[node name="MuteButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 875.0
margin_right = 1189.0
margin_bottom = 1050.0
toggle_mode = true
icon = ExtResource( 5 )
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="toggled" from="FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="MuteButton" to="." method="_on_MuteButton_toggled"]
